[tool.poetry]
name = 'braubuddy'
version = '0.0.1'
authors = [
    'James Stewart <james@amorphitec.io>',
    'Stuart Dines <me@stuartdines.com>',
]
readme = 'README.md'
repository = 'http://braubuddy.org/'
homepage = 'https://github.com/amorphitec/braubuddy'

classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
]

[tool.poetry.dependencies]
python = '>=3.6'

